--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,12 @@ go:
  - release
  - tip
 
+before_install:
+ - go get github.com/tools/godep
+
 script:
- - go build
+ - godep go build
+
+matrix:
+  allow_failures:
+    - go: tip
