--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: go
 go:
- - 1.3
- - 1.4
- - release
+ - 1.5
  - tip
 
 sudo: false
@@ -10,9 +8,10 @@ sudo: false
 before_install:
  - go get github.com/tools/godep
  - export PATH=$HOME/gopath/bin:$PATH
+ - export GO15VENDOREXPERIMENT=1
 
 script:
- - godep go build
+ - make
 
 matrix:
   allow_failures:
